fix the click button issue

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       </section>
 
       <!-- Instagram Integration -->
-      <section id="instagram-feed" class="instagram-feed fade-in-section">
+      <section id="instagram-feed" class="instagram-feed">
         <div class="section-header">
           <h2>@santhosh_dream_drawing</h2>
           <div class="separator"></div>
@@ -181,9 +181,10 @@
           <a
             href="https://www.instagram.com/santhosh_dream_drawing"
             target="_blank"
+            rel="noopener noreferrer"
             class="btn btn-outline"
-            >View More on Instagram</a
-          >
+            id="ig-view-more-btn"
+          >View More on Instagram</a>
         </div>
       </section>
 
