add the new drawing

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&family=Satisfy&display=swap"
       rel="stylesheet"
     />
 
@@ -157,11 +157,11 @@
             class="service-card fade-in-section"
             style="transition-delay: 0.3s"
           >
-            <i class="fa-solid fa-desktop"></i>
-            <h3>Digital Illustration</h3>
+            <i class="fa-solid fa-book-open"></i>
+            <h3>Storytelling Art</h3>
             <p>
-              Modern digital art suitable for commercial, editorial, or personal
-              projects with limitless possibilities.
+              Your love story or life moments translated into a custom visual story with emotional narration.
+              <span class="unique-font" style="font-size: 1.1rem; display: block; margin-top: 1rem;">Created by Santhosh & Shamu</span>
             </p>
           </div>
         </div>
@@ -200,7 +200,7 @@
             <div class="contact-details">
               <div class="contact-item">
                 <i class="fa-solid fa-envelope"></i>
-                <span>hello@santhoshdreamdrawing.com</span>
+                <span>@santhoshaa2023@gmail.com</span>
               </div>
               <div class="contact-item">
                 <i class="fa-solid fa-location-dot"></i>
@@ -267,7 +267,7 @@
     <!-- Fullscreen Lightbox -->
     <div id="lightbox" class="lightbox">
       <span class="lightbox-close">&times;</span>
-      <img class="lightbox-content" id="lightbox-img" />
+      <img class="lightbox-conttheent" id="lightbox-img" />
       <div class="lightbox-caption" id="lightbox-caption"></div>
     </div>
 
